close popup on click

--- a/public/index.html
+++ b/public/index.html
@@ -11,28 +11,28 @@
 
   <style>
   @font-face {
-    font-family: 'KlavikaRegular';
-    src: url('/public/font/klavika-regular-webfont.eot');
+    font-family: 'Klavika';
+    src: url('./font/klavika-regular-webfont.eot');
     src: local('KlavikaRegular'),
-        url('/font/klavika-regular-webfont.ttf') format('truetype');
-}
-header h1 {
-    font-family: 'Klavika';
-    text-align: center;
-    opacity:3.9;
-}
+        url('./font/klavika-regular-webfont.ttf') format('truetype');
+    }
+    header h1 {
+        font-family: 'Klavika';
+        text-align: center;
+        opacity:3.9;
+    }
 
-section #misc #misc-left h3 {
-    font-family:'Klavika';
-    text-align:right;
-    text-shadow:10%;
-    opacity:3.9;
-}
+    section #misc #misc-left h3 {
+        font-family:'Klavika';
+        text-align:right;
+        text-shadow:10%;
+        opacity:3.9;
+    }
 
-h6 {
-    font-family: 'Klavika';
-    text-align: center;
-}
+    h6 {
+        font-family: 'Klavika';
+        text-align: center;
+    }
 
     #page {
       position:absolute;
@@ -162,7 +162,7 @@ section #misc #misc-middle img {
 
       <section>
         <div id="misc">
-          <div id="misc-left"><p>Hashtag:</p><h3>#SpotNV</h3></div>
+          <div id="misc-left"><h3>#SpotNV</h3></div>
           <div id="misc-middle"></div>
           <div id="misc-right"> </div>
         </div>
