--- a/public/index.html
+++ b/public/index.html
@@ -1,11 +1,7 @@
 <html>
   <head>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/leaflet/0.7.7/leaflet.css">
-    <link rel="stylesheet" href="./leaftletCluster/MarkerCluster.css">
-    <link rel="stylesheet" href="./leaftletCluster/MarkerCluster.Default.css">
-    <link rel="stylesheet" href="./leaftletCluster/MarkerCluster.Default.ie.css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/leaflet/0.7.7/leaflet.js"></script>
-    <script src="./leaftletCluster/leaflet.markercluster.js"></script>
     <title>mycph</title>
   </head>
 
@@ -16,22 +12,20 @@
     src: local('KlavikaRegular'),
         url('./font/klavika-regular-webfont.ttf') format('truetype');
     }
+    body {
+        font-family: "Klavika", Sans-Serif;
+    }
     header h1 {
         font-family: 'Klavika';
         text-align: center;
         opacity:3.9;
     }
 
-    section #misc #misc-left h3 {
+    section #slideshow h3 {
         font-family:'Klavika';
         text-align:right;
         text-shadow:10%;
         opacity:3.9;
-    }
-
-    h6 {
-        font-family: 'Klavika';
-        text-align: center;
     }
 
     #page {
@@ -45,9 +39,8 @@
       left:0;
       right:0;
       border-style: dotted solid;
-        border-color:#BBBBBE;
-        border-width: 2px;
-      align-items: center;
+      border-color:#BBBBBE;
+      border-width: 2px;
       background-color: #FFFFFF;
       height:90px;
     }
@@ -60,80 +53,33 @@
       bottom:20px;
       overflow:auto;
     }
-    section #misc{
+    section #sidebar{
       position:absolute;
       top:0;
       left:0;
-      right:100%;
-      height:200px;
+      bottom:0;
+      width:300px;
     }
-    section #misc #misc-left {
-      position:absolute;
-      border-style: solid;
-      border-color:#BBBBBE;
-      border-width: 2px;
-      left:0%;
-      Right:10%;
-       top:0%;
-      width:0%;
-      height:0%;
-    }
-    section #misc #misc-left p{
-     font-family: 'KlavikaRegular';
-     border-width: 2px;
-     font-style: italic;
-      text-align:right;
-      text-shadow:10%;
-      opacity:3.9;
-    }
-    section #misc #misc-left h3 {
-     font-family: 'Klavika';
-     font-style: italic;
-      text-align:right;
-      text-shadow:10%;
-      opacity:3.9;
-    }
-    section #misc #misc-middle {
-      position:absolute;
-      border-style: solid;
-      border-color:#BBBBBE;
-      border-width: 1px;
-      left:10%;
-      right:10%;
-      top:50%;
-      width:50%;
-      height:100%;
-    }
-/* resize images*/
-section #misc #misc-middle img {
-    width: 350px;
-    height: 350px;
-}
-    section #misc #misc-right {
-      position:absolute;
-      border-style: dotted solid;
-      right:50%;
-      top:0;
-      width:25%;
-      height:100%;
+
+    section #slideshow img {
+      width:100%;
     }
     section #main {
       position:absolute;
-      top:100px;
-      left:28%;
-      right:3%;
-      border-style: solid;
-      border-width: 1px;
-      border-color:#BBBBBE;
-      bottom:10%;
+      left:300px;
+      top:0px;
+      right:0;
+      bottom:0;
     }
     footer {
       position:absolute;
+      overflow:hidden;
       bottom:0;
       background-color: #BBDEFA;
       left:0;
       right:0;
       height:40px;
+      text-align:center;
     }
     .banner {
       position:absolute;
@@ -161,18 +107,15 @@ section #misc #misc-middle img {
       </header>
 
       <section>
-        <div id="misc">
-          <div id="misc-left"><h3>#SpotNV</h3></div>
-          <div id="misc-middle"></div>
-          <div id="misc-right"> </div>
+        <div id="sidebar">
+          <p>Alle billeder med <strong>#SpotNV</strong><p>
+          <div id="slideshow"></div>
         </div>
-        <div id="main">
-          <div id="main"></div>
-        </div>
+        <div id="main"></div>
       </section>
 
       <footer id="footer">
-        <h6> Instagram Map Campaign </h6>
+        <p>Instagram Map Campaign</p>
       </footer>
     </div>
     <script src="./index.js"></script>
